syntax = "proto3";

package exercisepb;

message TranslatedLanguages {
  string vi = 1;
}